<resources>
    <string name="app_name">Distance Tracker</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission">Welcome to Distance Tracker. In order to use our app we will first to request location permission from you. Otherwise we will not be able to provide you with our service. If you are agree press the CONTINUE button.</string>
    <string name="o">o</string>
    <string name="goNext">Continue</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="share">Share</string>
    <string name="result">%1$s km</string>
</resources>